
2010-03-30  Paulo Pizarro  <paulo.pizarro@gmail.com>
	* Change Makefile.am to create luasofia-glib.so.

2010-03-25  Paulo Pizarro  <paulo.pizarro@gmail.com>
	* configure.in: Version 0.1.3devel
	* Check if installed lua5.1 package or lua package.
	* Change Makefile to fix errors on include paths and install path.

2010-03-08  Paulo Pizarro  <paulo.pizarro@gmail.com>
	* configure.in: Version 0.1.2
	* Fixing the error msg when no tag is found.

2010-02-26  Tiago Katcipis <tiagokatcipis@gmail.com>
	* If a tag does not exist we get an error.
	* Fixing wrong order when calling luasofia_open.

2010-02-26  Tiago Katcipis <tiagokatcipis@gmail.com>
	* Create NtaAgent class.

2010-02-12  Paulo Pizarro  <paulo.pizarro@gmail.com>
	* configure.in: Version 0.1.2devel
	* Create TPORT module and registered TPORT tags 

2010-01-29  Paulo Pizarro  <paulo.pizarro@gmail.com>
	* configure.in: Version 0.1.1
	* Create NTA module and registered NTA tags.
	* Add destroy method to NuaHandle class.

2009-12-29  Paulo Pizarro  <paulo.pizarro@gmail.com>, Tiago Katcipis <tiagokatcipis@gmail.com>
	* Glib module added (bind to su_glib.h functions).

2009-12-23  Paulo Pizarro  <paulo.pizarro@gmail.com>, Tiago Katcipis <tiagokatcipis@gmail.com>
	* luasofia created.
