@@ -1,3 +1,3 @@
-Tiago Katcipis <tiagokatcipis@gmail.com>
 Paulo Pizarro  <paulo.pizarro@gmail.com>
+Tiago Katcipis <tiagokatcipis@gmail.com>
 
